--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Christlie Lavarin</title>
+		<meta
+			name="description"
+			content="Christlie Lavarin is a front-end developer based in New Jersey, USA. Explore my projects and get in touch!" />
+
+		<title>Christlie Lavarin - Front-End Developer in New Jersey, USA</title>
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
 			rel="stylesheet"
@@ -62,10 +66,10 @@
 		<div class="container">
 			<!-- Yoga App Section -->
 			<div class="row">
-				<div class="col-md-6">
+				<div class="col-12 col-md-6">
 					<img src="images/yoga.png" class="img-fluid rounded" alt="Yoga App" />
 				</div>
-				<div class="col-md-6">
+				<div class="col-12 col-md-6">
 					<h2 class="mb-3">Yoga app</h2>
 					<p>
 						Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -79,7 +83,7 @@
 
 			<!-- Weather App Section -->
 			<div class="row mt-5">
-				<div class="col-md-6">
+				<div class="col-12 col-md-6">
 					<h2 class="mb-3">Weather app</h2>
 					<p>
 						Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -89,7 +93,7 @@
 					</p>
 					<a href="#" class="primary-link">Launch Weather App</a>
 				</div>
-				<div class="col-md-6">
+				<div class="col-12 col-md-6">
 					<img
 						src="images/weather.png"
 						class="img-fluid rounded"
@@ -99,13 +103,13 @@
 
 			<!-- Yogurt App Section -->
 			<div class="row mt-5">
-				<div class="col-md-6">
+				<div class="col-12 col-md-6">
 					<img
 						src="images/yogurt.png"
 						class="img-fluid rounded"
 						alt="Yogurt App" />
 				</div>
-				<div class="col-md-6">
+				<div class="col-12 col-md-6">
 					<h2 class="mb-3">Yogurt app</h2>
 					<p>
 						Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
